--- a/entrypad/src/main/res/values/strings.xml
+++ b/entrypad/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">entrypad</string>
+    <string name="emptyText">--</string>
+    <string name="createProject">创建工程</string>
+    <string name="registrationList">登记列表</string>
+    <string name="lastStep">上一步</string>
+    <string name="nextStep">下一步</string>
+    <string name="registrationPlatform">农村不动产登记平台</string>
+    <string name="registrationInfo">登记信息</string>
+    <string name="takePhoto">现场拍照</string>
+    <string name="sketchDraw">草图绘制</string>
+    <string name="add">添加</string>
+    <string name="scanIdCard">扫描身份证</string>
+    <string name="inputMsg">输入信息</string>
+    <string name="cancel">取消</string>
+    <string name="photo">相册</string>
+    <string name="camera">拍照</string>
+    <string name="sketch">拍摄草图</string>
 </resources>
