--- a/entrypad/src/main/res/values/strings.xml
+++ b/entrypad/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="registrationInfo">登记信息</string>
     <string name="takePhoto">现场拍照</string>
     <string name="sketchDraw">草图绘制</string>
+    <string name="groundFigure">宗地落图</string>
+    <string name="resultShow">成果展示</string>
     <string name="add">添加</string>
     <string name="scanIdCard">扫描身份证</string>
     <string name="inputMsg">输入信息</string>
